fix: correct navbar brand height to align logo properly

--- a/src/main/resources/static/assets/servizi-dog-theme/css/style.css
+++ b/src/main/resources/static/assets/servizi-dog-theme/css/style.css
@@ -262,6 +262,10 @@ section.section-darker img {
 	box-shadow: 0px 0px 5px #555;
 }
 
+.navbar-brand {
+	height: 100% !important;
+}
+
 .navbar-brand img {
 	width: 250px;
 }
